--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,3 +40,7 @@ mybatis:
   mapper-locations: mappers/**/*.xml
 #  type-aliases-package:
 
+jwt:
+  secret: ${JWT_SECRET}
+  expiration: 1800000 # ????? (access token)
+  refresh-expiration: 60480000 # 7일
