--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,10 +22,33 @@ spring:
     username: ${GOOGLE_USERNAME}
     password: ${GOOGLE_APP_PASSWORD}
     # 기타 설정 추가하기!
+  config:
+    import: optional:env[.env]
+
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: ${KAKAO_CLIENT_ID}
+            client-secret: ${KAKAO_CLIENT_SECRET}
+            redirect-uri: ${KAKAO_REDIRECT_URI}
+            client-authentication-method: POST
+            authorization-grant-type: authorization_code
+            scope:
+              - profile_nickname
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
 
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
   mapper-locations: mappers/**/*.xml
 #  type-aliases-package:
+
+
 
