--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-
-
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
@@ -7,11 +5,12 @@ spring:
     username: baksal
     password: baksal
   jpa:
-    hibernate:
-      ddl-auto: none
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
+    hibernate:
+      ddl-auto: none
 #  data:
 #    redis:
 #      host: localhost
@@ -21,4 +20,4 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
-  mapper-locations: classpath:/com/hanhwa_tae/gulhan/packages/query/mapper/*.xml
+  mapper-locations: mappers/**/*.xml
