Refactor: 장바구니 전체 목록 조회 # 15

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,7 +38,7 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
   mapper-locations: mappers/**/*.xml
-#  type-aliases-package:
+  type-aliases-package: com.hanhwa_tae.gulhan.cart.query.dto
 
 jwt:
   secret: ${JWT_SECRET}
