Refactor: 리뷰 등록/수정/삭제 기능 수정

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ repositories {
 
 dependencies {
 
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
