--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,3 +44,8 @@ jwt:
   secret: ${JWT_SECRET}
   expiration: 1800000 # ????? (access token)
   refresh-expiration: 60480000 # 7일
+
+
+payment:
+  toss:
+    test_client_api_key:
