--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,3 +39,8 @@ mybatis:
     map-underscore-to-camel-case: true
   mapper-locations: mappers/**/*.xml
 
+
+jwt:
+  secret: ${JWT_SECRET}
+  expiration: 1800000 # ????? (access token)
+  refresh-expiration: 60480000 # 7일
