--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,6 +1,8 @@
 spring:
-  profiles:
-    active: default
+  config:
+    activate:
+      on-profile: test
+
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://${DB_URL}
@@ -11,6 +13,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.MariaDBDialect
+        show_sql: true
   data:
     redis:
       host: ${REDIS_HOST}
