--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ repositories {
 
 dependencies {
 
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
