--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -70,6 +70,7 @@ jwt:
 payment:
   toss:
     test_secrete_api_key: ${toss_secret_key}
+    test_client_api_key: ${toss_client_key}
     success_url: ${success_url}
     fail_url: ${fail_url}
 
