refactor: swagger 라우터 등록

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -26,6 +26,14 @@ spring:
             - Path=/api/v1/s2/**
           filters:
             - RewritePath=/api/v1/s2/(?<segment>.*), /$\{segment}
+        - id: first-swagger-server
+          uri: lb://FIRST-SERVER
+          predicates:
+            - Path=/s1/v3/api-docs/**
+        - id: second-swagger-server
+          uri: lb://SECOND-SERVER
+          predicates:
+            - Path=/s2/v3/api-docs/**
 eureka:
   client:
     fetch-registry: true
