--- a/first-server/src/main/resources/application.yml
+++ b/first-server/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
     import: optional:configserver:http://localhost:8888
 
 springdoc:
+  api-docs:
+    path: /s1/v3/api-docs
   packages-to-scan: com.hanhwa_tae.firstserver
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
