--- a/second-server/build.gradle
+++ b/second-server/build.gradle
@@ -22,6 +22,9 @@ repositories {
 }
 
 dependencies {
+
+    // https://mvnrepository.com/artifact/com.apollographql.apollo3/apollo-api-jvm
+    implementation 'com.apollographql.apollo3:apollo-api-jvm:3.8.5'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
