--- a/second-server/build.gradle
+++ b/second-server/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
 
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     // https://mvnrepository.com/artifact/com.apollographql.apollo3/apollo-api-jvm
     implementation 'com.apollographql.apollo3:apollo-api-jvm:3.8.5'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
