--- a/second-server/build.gradle
+++ b/second-server/build.gradle
@@ -22,8 +22,11 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.apache.tika/tika-core
+    implementation 'org.apache.tika:tika-core:3.1.0'
 
-    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    // https://mvnrepository.com/artifact/io.awspring.cloud/spring-cloud-aws-s3
+    implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.3.0'
     // https://mvnrepository.com/artifact/com.apollographql.apollo3/apollo-api-jvm
     implementation 'com.apollographql.apollo3:apollo-api-jvm:3.8.5'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
