Refactor: 결제 로직 수정 및 gateway 설정 수정

--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -23,7 +23,7 @@ ext {
 
 dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
-    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
